--- a/style.css
+++ b/style.css
@@ -11,8 +11,8 @@ h1{color:grey;font-family:verdana}
 .number{
     color: red;
 }
-.roww{
-	width: 100px;
+span{
+	width: 50%;
 	display:inline-block;
 }
 
